// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "https://github.com/allanma88/Bitcoin/protocol";
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package protocol;

// The transaction service definition.
service Transaction {
  // add a traction
  rpc AddTx (TransactionReq) returns (TransactionReply) {}
}

message InReq {
  bytes prev_hash = 1;
  uint32 index = 2;
  bytes signature = 3;
}

message OutReq {
  bytes pubkey = 1;
  uint64 value = 2;
}

// The transaction message containing the user's name.
message TransactionReq {
  bytes hash = 1;
  uint32 in_len = 2;
  uint32 out_len = 3;
  repeated InReq ins = 4;
  repeated OutReq outs = 5;
  int64 time = 6;
  repeated string nodes = 7;
}

// The response message containing the greetings
message TransactionReply {
  bool result = 1;
}
